<resources>
    <string name="app_name">SupplyChainApp</string>

    <string name="swansea_bold" translatable="false">fonts/swansea_bold</string>
    <string name="swansea" translatable="false">fonts/swansea</string>
    <string name="swansea_bold_italic" translatable="false">fonts/swansea_bold_italic</string>

    <string name="supplier">Supplier</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="wholeSeller">WholeSeller</string>
    <string name="retailer">Retailer</string>
    <string name="consumer">Consumer</string>

    <string name="supplier_name">Supplier Name</string>
    <string name="retailer_name">Retailer Name</string>
    <string name="manufacturer_name">Manufacturer Name</string>
    <string name="wholeseller_name">WholeSeller Name</string>
    <string name="pick_up_from">Pick Up From</string>
    <string name="deliver_to">Deliver To</string>
    <string name="pick_up_date">Pick Up Date</string>
    <string name="deliver_date">Deliver Date</string>
    <string name="fab_content_desc">Save</string>
    <string name="fab_add_more_info">Add More Info</string>
    <string name="type">Type</string>


    <string name="some_info_still_left">Alert</string>
    <string name="some_info_still_left_info">Some Information Still Required On Next Screen, Press Yes to save only [TYPE] information</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="finish">Finish</string>
    <string name="proceed">Continue</string>


</resources>