<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:custom="http://schemas.android.com/tools"
    android:background="@drawable/screen_bg"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/extra_large_space"
            style="@style/TextInputLayoutStyle"
            android:textColorHint="@color/cornFlowerBlue"
            app:boxBackgroundMode="outline"
            app:endIconMode="clear_text"
            app:endIconTint="@color/cornFlowerBlue"
            app:shapeAppearance="@style/Rounded">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/senderName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Sarim Industries"
                style="@style/TextInputLayoutEditTextStyle"
                android:hint="@string/supplier_name" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/extra_large_space"
            style="@style/TextInputLayoutStyle"
            android:textColorHint="@color/cornFlowerBlue"
            app:boxBackgroundMode="outline"
            app:endIconMode="clear_text"
            app:endIconTint="@color/cornFlowerBlue"
            app:shapeAppearance="@style/Rounded">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/receiverName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Subhan Mills"
                style="@style/TextInputLayoutEditTextStyle"
                android:hint="@string/wholeseller_name" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/extra_large_space"
            style="@style/TextInputLayoutStyle"
            android:textColorHint="@color/cornFlowerBlue"
            app:boxBackgroundMode="outline"
            app:endIconMode="clear_text"
            app:endIconTint="@color/cornFlowerBlue"
            app:shapeAppearance="@style/Rounded">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pickUpFrom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Karachi"
                style="@style/TextInputLayoutEditTextStyle"
                android:hint="@string/pick_up_from" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/extra_large_space"
            style="@style/TextInputLayoutStyle"
            android:textColorHint="@color/cornFlowerBlue"
            app:boxBackgroundMode="outline"
            app:endIconMode="clear_text"
            app:endIconTint="@color/cornFlowerBlue"
            app:shapeAppearance="@style/Rounded">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/deliverTo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Islamabad"
                style="@style/TextInputLayoutEditTextStyle"
                android:hint="@string/deliver_to" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/extra_large_space"
            style="@style/TextInputLayoutStyle"
            android:textColorHint="@color/cornFlowerBlue"
            app:boxBackgroundMode="outline"
            app:endIconMode="clear_text"
            app:endIconTint="@color/cornFlowerBlue"
            app:shapeAppearance="@style/Rounded">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pickUpDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextInputLayoutEditTextStyle"
                android:text="12, Jan 2021"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/pick_up_date" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/extra_large_space"
            style="@style/TextInputLayoutStyle"
            android:textColorHint="@color/cornFlowerBlue"
            app:boxBackgroundMode="outline"
            app:endIconMode="clear_text"
            app:endIconTint="@color/cornFlowerBlue"
            app:shapeAppearance="@style/Rounded">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/deliverDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextInputLayoutEditTextStyle"
                android:text="18, Jan 2021"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/deliver_date" />

        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/extra_large_space"
            >

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/finishButton"
                style="@style/ProminentNormalButtonStyle"
                android:layout_width="@dimen/button_width"
                android:layout_gravity="bottom|left"
                android:layout_marginTop="@dimen/general_space"
                android:layout_marginBottom="@dimen/zero_space"
                android:layout_marginStart="@dimen/extra_large_space"
                android:layout_marginEnd="@dimen/general_space"
                android:enabled="true"
                custom:text="finish"
                android:text="@string/finish" />



            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/continueButton"
                style="@style/ProminentNormalButtonStyle"
                android:layout_width="@dimen/button_width"
                android:layout_marginTop="@dimen/general_space"
                android:layout_marginBottom="@dimen/zero_space"
                android:layout_marginStart="@dimen/general_space"
                android:layout_marginEnd="@dimen/extra_large_space"
                android:layout_alignParentRight="true"
                android:enabled="true"
                custom:text="proceed"
                android:text="@string/proceed" />





            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/saveInfoButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_margin="16dp"
                android:contentDescription="@string/fab_content_desc"
                android:visibility="gone"
                app:srcCompat="@drawable/ic_save" />

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/addMoreInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|left"
                android:layout_margin="16dp"
                android:contentDescription="@string/fab_add_more_info"
                android:visibility="gone"
                android:text="@string/fab_add_more_info" />

        </RelativeLayout>

    </LinearLayout>
</ScrollView>
