<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    xmlns:custom="http://schemas.android.com/apk/res-auto">

   <include
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:visibility="gone"
       layout="@layout/toolbar_view"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/manufacturerButton"
        style="@style/ProminentNormalButtonStyle"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/extra_large_space"
        android:layout_marginBottom="@dimen/zero_space"
        android:layout_marginStart="@dimen/extra_large_space"
        android:layout_marginEnd="@dimen/extra_large_space"
        android:enabled="true"
        custom:text="manufacturer"
        android:text="@string/manufacturer"
        tools:text="@string/manufacturer" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/supplierButton"
        style="@style/ProminentNormalButtonStyle"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/extra_large_space"
        android:layout_marginBottom="@dimen/zero_space"
        android:layout_marginStart="@dimen/extra_large_space"
        android:layout_marginEnd="@dimen/extra_large_space"
        android:enabled="true"
        custom:text="supplier"
        android:text="@string/supplier"
        tools:text="@string/supplier" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/retailerButton"
        style="@style/ProminentNormalButtonStyle"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/extra_large_space"
        android:layout_marginBottom="@dimen/zero_space"
        android:layout_marginStart="@dimen/extra_large_space"
        android:layout_marginEnd="@dimen/extra_large_space"
        android:enabled="true"
        custom:text="retailer"
        android:text="@string/retailer"
        tools:text="@string/retailer" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/consumerButton"
        style="@style/ProminentNormalButtonStyle"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/extra_large_space"
        android:layout_marginBottom="@dimen/zero_space"
        android:layout_marginStart="@dimen/extra_large_space"
        android:layout_marginEnd="@dimen/extra_large_space"
        android:enabled="true"
        custom:text="consumer"
        android:text="@string/consumer"
        tools:text="@string/consumer" />
    <Button
        android:id="@+id/btnScanBarcode"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="44dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="Scan BarCode"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.676"
        app:layout_constraintStart_toStartOf="parent" />

    </LinearLayout>

</LinearLayout>