<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/general_space"
        android:background="@color/whiteSmoke"
        card_view:cardCornerRadius="4dp"
        card_view:cardBackgroundColor="@color/whiteSmoke"
        app:cardBackgroundColor="@color/white">

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/general_space"
        android:orientation="vertical">


        <TextView
            android:id="@+id/typeName"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="@dimen/large_space"
            android:gravity="center"
            android:inputType=""
            style="@style/TextTypeStyle" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/large_space"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/senderType"
                style="@style/TextFieldStyleForConsumerFields"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/supplier_name" />

            <TextView
                android:id="@+id/senderName"
                style="@style/TextFieldStyleForConsumerInfo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/large_space"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/receiverType"
                style="@style/TextFieldStyleForConsumerFields"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/retailer_name" />

            <TextView
                android:id="@+id/receiverName"
                style="@style/TextFieldStyleForConsumerInfo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/large_space"
            android:orientation="horizontal">

            <TextView
                style="@style/TextFieldStyleForConsumerFields"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pick_up_from" />

            <TextView
                android:id="@+id/pickUpFrom"
                style="@style/TextFieldStyleForConsumerInfo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/large_space"
            android:orientation="horizontal">

            <TextView
                style="@style/TextFieldStyleForConsumerFields"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/deliver_to" />

            <TextView
                android:id="@+id/deliverTo"
                style="@style/TextFieldStyleForConsumerInfo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/large_space"
            android:orientation="horizontal">

            <TextView
                style="@style/TextFieldStyleForConsumerFields"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pick_up_date" />

            <TextView
                android:id="@+id/pickUpDate"
                style="@style/TextFieldStyleForConsumerInfo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/large_space"
            android:orientation="horizontal">

            <TextView
                style="@style/TextFieldStyleForConsumerFields"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/deliver_date" />

            <TextView
                android:id="@+id/deliverDate"
                style="@style/TextFieldStyleForConsumerInfo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

    </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>